# MAD-UCPH

./: L1_Linear_Regression.ipynb  L2_Multivariate Linear Regression.ipynb  L8_Non_Linear_Regression.ipynb  pyproject.toml
Assignment/A1_files/: housing_1.py  housing_2.py  linreg.py
Assignment/A2_files/: Polynomial.py  assignment 2.py  linweightreg.py
Assignment/A3_files/: confidenceinterv.py  pca_StudentVersion.ipynb
Assignment/A4_files/: classification_StudentVersion.ipynb  classification_StudentVersion_Marion_Rosec.ipynb
Assignment/A5_files/: A5_Ex2.py
Assignment/A6_files/: A6_Bayes_3.py
exam_final_2023/: criticalValue.py
exam_final_2023/code/: PCA.py  Question4.py  Question6.py  Question7.py  kNN_students_2023.py  kNN_students_2023.txt
